# uni-timetable

./: .gitignore  compose.yaml  pyproject.toml
.github/workflows/: backend.yaml  frontend.yaml
backend/: .gitignore  Makefile  app.py  pyproject.toml  settings.py
backend/db/: init.py  models.py
backend/scripts/: fetch_from_tables.py  fix_copied_str.py  models.py
backend/scripts/scraping/: fetch_data_scraping.py  type.py
backend/scripts/scraping/data/engineering/: data_processing.py  type.py
docker/mysql/: .env.sample  Dockerfile
frontend/: .env.sample  .gitignore  auth.config.ts  auth.ts  package-lock.json  package.json
frontend/prisma/: schema.prisma  seed.ts  seedData.ts
frontend/prisma/migrations/20240507131635_init/: migration.sql
frontend/src/app/: globals.css  layout.tsx  page.tsx  schema.tsx
frontend/src/app/error/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/signout/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/timetable/: page.tsx
frontend/src/lib/: placeholder_data.ts
frontend/src/types/: user.ts
frontend/src/utils/: supabase.ts
